--- a/CNN_Binarized.ipynb
+++ b/CNN_Binarized.ipynb
@@ -1143,6 +1143,21 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Experimental Results\n",
+        "\n",
+        "The results above shows the accuracy comparison between a standard CNN and the Binarized CNN using multiple combinations of loss functions and optimizers.\n",
+        "\n",
+        "These results highlight that while binarization reduces the accuracy compared to the standard CNN, the combination of Cross Entropy Loss with the Adam optimizer yields the highest accuracy (62.35%) for the BNN configuration. Making it with 10.6% less accuracy compared to the best performing CNN model.\n",
+        "\n",
+        "This experiment highlight a simulation of training a CNN model using binary weight and activations."
+      ],
+      "metadata": {
+        "id": "KJyDA01DvOuC"
+      }
     }
   ]
 }
